k8s/aiostreams/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiostreams
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: aiostreams
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
